--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.HomeRental"
         tools:targetApi="31">
         <activity
+            android:name=".ChatScreen"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".MyPostsOnProfile"
             android:exported="false"
             android:label="@string/title_activity_my_posts_on_profile"
