--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HomeRental"
         tools:targetApi="31">
+        <activity
+            android:name=".propertyDetailsActivity"
+            android:exported="false">
+
+        </activity>
         <activity
             android:name=".CollectRentAcivity"
             android:exported="false" />
@@ -38,9 +43,6 @@
             android:exported="false" />
         <activity
             android:name=".UpdateProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".UploadProfilePicActivity"
             android:exported="false" />
         <activity
             android:name=".ForgotPasswordActivity"
